[package]
name = "hotswap"
version = "0.1.6"
authors = ["Ian Ornelas <ian.orn@gmail.com>"]
description = "Easy code swapping in running executables"
repository = "https://github.com/draivin/rust-hotswap"
license = "MIT"

[lib]
name = "hotswap"
plugin = true

[dependencies]
libloading = "*"
parking_lot = {version = "*", features = ["nightly"]}
