[package]
name = "hotswap"
version = "0.1.7"
authors = ["Ian Ornelas <ian.orn@gmail.com>"]
description = "Easy code swapping in running executables"
repository = "https://github.com/draivin/rust-hotswap"
license = "MIT"

[lib]
name = "hotswap"
plugin = true

[dependencies]
libloading = "0.2.*"
parking_lot = {version = "0.2.*", features = ["nightly"]}
