[package]
name = "hotswap"
version = "0.5.0"
authors = ["Ian Ornelas <ian.orn@gmail.com>"]
readme = "README.md"
description = "Easy code swapping in running executables"
repository = "https://github.com/draivin/rust-hotswap"
license = "MIT"

[badges]
travis-ci = { repository = "draivin/rust-hotswap" }
appveyor = { repository = "draivin/rust-hotswap" }

[lib]
name = "hotswap"
plugin = true
